# zombie

./: .gitignore  CMakeLists.txt
demo/: CMakeLists.txt  grid.h  scene.h
demo/scenes/: svg2obj.py
demo/scenes/engine/: bvc.json  square-bvc.json  square-wost.json
demo/scenes/engine/solutions/: bvc.pfm  bvc_color.pfm  square-bvc.pfm  square-wost.pfm
include/zombie/point_estimation/: walk_on_stars.h
include/zombie/utils/: fcpw_scene_loader.h
include/zombie/variance_reduction/: reverse_walk_splatter.h
